# BA_MCPLLM

./: .gitignore  README.md  install_vscode.sh
manual/: Manual_EN_chunks.jsonl  bm25_index.pkl  chunk_meta.jsonl  chunk_preview.html  create_bm25_index.py  create_chunks.py  embed_chunks.py  hybrid_search_server.py  rag_server.py  removed_chunks.html  run_rag.sh  vector_db.ann
manual/chroma_manual/: chunks.jsonl
manual/chroma_manual/5fd21ab4-af9d-4df8-ad3e-5d790ec1b73c/: index_metadata.pickle
prj/: CMakeLists.txt  build-clean.sh  llm_demo  multimodel_demo
prj/src/: llm_demo.cpp
rkllm_api_demo/: CMakeLists.txt  Readme.md  build-linux.sh  multimodel_demo
workspace/: BAMCP.code-workspace  install_vscode.sh  wget-log
